--- a/index.html
+++ b/index.html
@@ -100,6 +100,10 @@
         </div>
       </div>
     </div>
+    <br>
+    <br>
+    <br>
+    <p>m-am ascuns si eu pe aici :) <3</p>
     <script>
       document.querySelectorAll('.timeline-item').forEach(item => {
         item.addEventListener('mouseenter', function() {
